--- a/styles.scss
+++ b/styles.scss
@@ -4,13 +4,24 @@
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
+  font-family: "Verdana", Tahoma, Geneva, sans-serif;
 }
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
   background-color: #000;
+}
+h2 {
+  text-align: center;
+  margin: auto;
+  color: #fff;
+  margin-bottom: 80px;
+  font-size: 50px;
+}
+h2::first-letter {
+  color: #ff105e;
 }
 .clock {
   height: 350px;
@@ -23,73 +34,58 @@ body {
   background-size: cover;
   border: 4px solid #fff;
   border-radius: 50%;
+  box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
+    inset 0 -15px 15px rgba(255, 255, 255, 0.05),
+    0 15px 15px rgba(0, 0, 0, 0.03), inset 0 15px 15px rgba(0, 0, 0, 0.03);
 }
 .clock:before {
   content: "";
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background-color: #fff;
   border-radius: 50%;
   z-index: 10000;
 }
-.clock.hour,
-.clock.minute,
-.clock.second {
+.clock .hour,
+.clock .minute,
+.clock .second {
   position: absolute;
 }
 
-.clock .hour,
-.hrs {
-  width: 160px;
-  height: 160px;
-}
-.clock .minute,
-.mins {
-  width: 190px;
-  height: 190px;
-}
-.clock .second,
-.secs {
-  width: 230px;
-  height: 230px;
-}
-.hrs,
-.mins,
-.secs {
+#hr,
+#mn,
+#sc {
   display: flex;
   justify-content: center;
-  //   align-items: center;
+  height: 0px;
   position: absolute;
   border-radius: 50%;
 }
-.hrs:before {
+#hr::before {
   content: "";
   position: absolute;
-  margin-left: 182px;
   width: 8px;
-  height: 80px;
+  height: 70px;
   background-color: #ff105e;
   z-index: 10;
   border-radius: 6px 6px 0 0;
 }
-.mins:before {
+#mn::before {
   content: "";
   position: absolute;
   width: 4px;
   height: 90px;
-  margin-right: 35px;
   background-color: #fff;
-  z-index: 12;
+  z-index: 11;
   border-radius: 6px 6px 0 0;
 }
-.secs:before {
+#sc::before {
   content: "";
   position: absolute;
   width: 2px;
-  margin-left: -298px;
-  height: 150px;
+  height: 130px;
   background-color: #fff;
-  z-index: 14;
+  z-index: 12;
   border-radius: 6px 6px 0 0;
 }
