--- a/styles.scss
+++ b/styles.scss
@@ -32,8 +32,9 @@ h2::first-letter {
   align-items: center;
   background-color: #000;
   background-size: cover;
-  border: 4px solid #fff;
+  border: 6px solid #fff;
   border-radius: 50%;
+  // box-shadow: 0 -15px 15px #fff;
   box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
     inset 0 -15px 15px rgba(255, 255, 255, 0.05),
     0 15px 15px rgba(0, 0, 0, 0.03), inset 0 15px 15px rgba(0, 0, 0, 0.03);
